--- a/ui/src/app/shell/header/header.component.html
+++ b/ui/src/app/shell/header/header.component.html
@@ -15,10 +15,6 @@
       <mat-icon>info</mat-icon>
       <span translate>About</span>
     </button>
-    <button mat-button routerLink="/landing-page" routerLinkActive="active">
-      <mat-icon>info</mat-icon>
-      <span translate>Landing Page</span>
-    </button>
   </div>
   <span fxFlex></span>
   <button mat-icon-button [matMenuTriggerFor]="languageMenu">
@@ -28,5 +24,17 @@
     <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
         {{language}}
       </button>
+  </mat-menu>
+  <button mat-icon-button [matMenuTriggerFor]="userMenu">
+    <mat-icon>person</mat-icon>
+  </button>
+  <mat-menu #userMenu="matMenu">
+    <mat-list>
+      <mat-list-item>
+        <span translate>Logged in as</span>&nbsp;<b>{{username}}</b>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+    </mat-list>
+    <button mat-menu-item (click)="logout()" translate>Logout</button>
   </mat-menu>
 </mat-toolbar>
