--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,44 +1,59 @@
 <div class="container">
   <mat-card>
+    <h1>
+      <mat-card-title translate>Decision Tree</mat-card-title>
+    </h1>
     <mat-vertical-stepper [linear]="false" #stepper>
       <mat-step [stepControl]="firstFormGroup">
-        <form [formGroup]="firstFormGroup">
-          <ng-template matStepLabel>Select a movie genre or food type</ng-template>
+        <form [formGroup]="firstFormGroup" (ngSubmit)="firstFormGroupSubmit()">
+          <ng-template matStepLabel>Select Cuisine</ng-template>
+          <br>
           <mat-form-field class="dropdown">
-            <mat-select #selectGenre formControlName="movie" [disabled]="selectFood.value != null" placeholder="Genre">
-              <mat-option [value]=""></mat-option>
-              <mat-option *ngFor="let genre of genres" [value]="genre.id">
-                {{genre.name}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <h3 style="display: inline; padding-left: 30px; padding-right: 30px;">OR</h3>
-          <mat-form-field class="dropdown">
-            <mat-select #selectFood formControlName="food" [disabled]="selectGenre.value != null" class="dropdown"
-              placeholder="Food Type">
+            <mat-select #selectFood formControlName="food" class="dropdown" placeholder="Food Type">
               <mat-option [value]=""></mat-option>
               <mat-option *ngFor="let food of foods" [value]="food.value">
                 {{food.name}}
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <br>
           <div>
             <button mat-button matStepperNext>Next</button>
           </div>
         </form>
       </mat-step>
       <mat-step [stepControl]="secondFormGroup">
-        <form [formGroup]="secondFormGroup">
-          <ng-template matStepLabel>Fill out your address</ng-template>
+        <form [formGroup]="secondFormGroup" (ngSubmit)="secondFormGroupSubmit()">
+          <ng-template matStepLabel>Select Genre</ng-template>
+          <br>
           <mat-form-field class="dropdown">
-            <mat-select #selectFood formControlName="food" [disabled]="selectGenre.value != null" class="dropdown"
-              placeholder="Food Type">
+            <mat-select #selectGenre formControlName="genre" placeholder="Genre">
               <mat-option [value]=""></mat-option>
-              <mat-option *ngFor="let food of foods" [value]="food.value">
-                {{food.name}}
+              <mat-option *ngFor="let genre of genres" [value]="genre.name">
+                {{genre.name}}
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <br>
+          <div>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button matStepperNext>Next</button>
+          </div>
+        </form>
+      </mat-step>
+      <mat-step [stepControl]="thirdFormGroup">
+        <form [formGroup]="thirdFormGroup" (ngSubmit)="thirdFormGroupSubmit()">
+          <ng-template matStepLabel>Select Drink</ng-template>
+          <br>
+          <mat-form-field class="dropdown">
+            <mat-select #selectDrink formControlName="drink" class="dropdown" placeholder="Drink Type">
+              <mat-option [value]=""></mat-option>
+              <mat-option *ngFor="let drink of drinks" [value]="drink.value">
+                {{drink.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <br>
           <div>
             <button mat-button matStepperPrevious>Back</button>
             <button mat-button matStepperNext>Next</button>
@@ -46,8 +61,19 @@
         </form>
       </mat-step>
       <mat-step>
-        <ng-template matStepLabel>Done</ng-template>
-        You are now done.
+        <ng-template matStepLabel>Check</ng-template>
+        <br>
+        <mat-list>
+          <mat-icon mat-list-icon>restaurant_menu</mat-icon>{{foodChoice}}
+          <br>
+          <br>
+          <mat-icon mat-list-icon>movie</mat-icon>{{genreChoice}}
+          <br>
+          <br>
+          <mat-icon mat-list-icon>local_drink</mat-icon>{{drinkChoice}}
+        </mat-list>
+        <br>
+
         <div>
           <button mat-button matStepperPrevious>Back</button>
           <button mat-button (click)="stepper.reset()">Reset</button>
@@ -55,4 +81,24 @@
       </mat-step>
     </mat-vertical-stepper>
   </mat-card>
+
+  <div *ngIf="isDisplayed" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="4%" fxLayoutAlign="center">
+    <mat-card class="example-card" *ngFor="let movie of movies | slice:0:3;">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>{{movie.title | slice:0:23}} ...</mat-card-title>
+        <mat-card-subtitle>{{movie.vote_average}}/10</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="">
+      <mat-card-content>
+        <p>
+          {{movie.overview | slice:0:100}} ...
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>DISLIKE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
