--- a/ui/src/app/home/home.component.scss
+++ b/ui/src/app/home/home.component.scss
@@ -1,8 +1,12 @@
-.container {
-  text-align: center;
-  padding: 1em;
-}
-
 .dropdown {
   width: 350px;
+}
+
+.example-card {
+  max-width: 20vw;
+}
+
+.example-header-image {
+  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-size: cover;
 }
