--- a/ui/src/app/login/login.component.html
+++ b/ui/src/app/login/login.component.html
@@ -19,17 +19,10 @@
     <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="login-box">
       <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
         <div class="login-error" [hidden]="!error || isLoading" translate>
-          Username or password incorrect.
+          Username incorrect.
         </div>
         <br/>
         <div fxLayout="column">
-
-          <mat-form-field>
-            <input type="text" matInput formControlName="name" [placeholder]="'Name' | translate" required/>
-            <mat-error *ngIf="loginForm.controls.name.valid || loginForm.controls.name.untouched">
-              <span translate>Name is required</span>
-            </mat-error>
-          </mat-form-field>
 
           <mat-form-field>
             <input type="text" matInput formControlName="username" autocomplete="username"
@@ -38,15 +31,7 @@
               <span translate>Username is required</span>
             </mat-error>
           </mat-form-field>
-          
-          <!-- <mat-form-field>
-            <input type="password" matInput formControlName="password" autocomplete="current-password"
-                   [placeholder]="'Password' | translate" required/>
-            <mat-error *ngIf="loginForm.controls.password.valid || loginForm.controls.password.untouched">
-              <span translate>Password is required</span>
-            </mat-error>
-          </mat-form-field> -->
-          <!-- <mat-slide-toggle color="primary" formControlName="remember" translate>Remember me</mat-slide-toggle> -->
+
           <br/>
           <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
             <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
