images for choices

--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -61,11 +61,17 @@
       <mat-step>
         <ng-template matStepLabel>Check</ng-template>
         <br>
-        <mat-list>
-          <mat-icon mat-list-icon>restaurant_menu</mat-icon>{{restaurantChoice}}
+        <mat-list style="display: inline-flex;">
+          <mat-card style="margin: 10px;">
+            <img style="width: 400px;" src="{{restaurantImage}}" /> 
+            <p>{{restaurantChoice}}</p>
+          </mat-card>
           <br>
           <br>
-          <mat-icon mat-list-icon>movie</mat-icon>{{movieChoice}}
+          <mat-card style="margin: 10px;">
+            <img style="width: 400px;" src="{{movieImage}}" /> 
+            <p>{{movieChoice}}</p>
+          </mat-card>
           <br>
           <br>
           <mat-icon mat-list-icon>local_drink</mat-icon>{{drinkChoice}}
