--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -69,6 +69,7 @@
           <br>
           <br>
           <mat-icon mat-list-icon>local_drink</mat-icon>{{drinkChoice}}
+          <img [src]="finalDrink.strDrinkThumb">
         </mat-list>
         <br>
 
